Formulario actualizado e implementación parcial de dashboard